# neuro-sdk

./: .gitignore  .gitmodules  README.md
core/: .gitignore  CMakeLists.txt  device_factory.cpp  device_scanner.cpp  logger.cpp  task_queue.cpp
core/ble/: ble_device_info.cpp  ble_device_wrapper.cpp
core/ble/android/: ble_device_jni.cpp  bluetooth_scanner.cpp  device_callback_wrap.cpp  gatt_info_wrap.cpp  java_onload.cpp  scanner_callback_wrap.cpp
core/ble/emulator/: emulated_device.cpp  emulator_client.cpp
core/ble/ios/: ble_delegate.mm  ble_device_objc.mm  ble_scanner_objc.mm
core/ble/linux/: ble_device_z.cpp  device_scanner_z.cpp
core/ble/mac/: bluetooth_le_device_mac.mm  macos_ble_enumerator.mm
core/ble/win/: ble_device_address.cpp  ble_device_win.cpp  ble_device_wrapper.cpp  ble_scanner_win.cpp  bluetooth_le_device_win.cpp  gatt_characteristic_win.cpp  gatt_service_win.cpp  gatt_wrapper.cpp  windows_ble_enumerator.cpp
core/c-wrap/: cbattery-channel.cpp  cbipolar-channel.cpp  cbridge-channels.cpp  cchannels.cpp  cdevice.cpp  celectrode-state-channel.cpp  cemulation-channel.cpp  cfiltered-channel.cpp  clistener.cpp  cmems-channel.cpp  corientation-channel.cpp  cparams.cpp  crespiration-channel.cpp  cscanner.cpp  csignal-channel.cpp  cspectrum-channel.cpp  cspectrum-power-channel.cpp  sdk_error.cpp
core/c-wrap/include/: cscanner.h  cspectrum_power_channel.h
core/channels/: angle_channel.cpp  battery_channel.cpp  channel_info.cpp  connection_stats_channel.cpp  device_channel.cpp  electrode_state_channel.cpp  emulation_channel.cpp  filtered_signal_channel_impl.cpp  mems_channel.cpp  orientation_channel.cpp  raw_signal_channel_impl.cpp  resistance_channel.cpp  respiration_channel.cpp  signal_channel.cpp  signal_channel_impl.cpp  spectrum_channel.cpp
core/channels/info/: channel_info.cpp  channel_notification.cpp
core/device/: brainbit.cpp  callibri.cpp  device.cpp  device_factory.cpp  device_impl.cpp  device_info.cpp  device_parameters.cpp  neuro_device.cpp  param_values.cpp  parameter_reader.cpp  parameter_writer.cpp
core/device/brainbit/: brainbit_device.cpp  brainbit_impl.cpp  brainbit_parameter_reader.cpp  brainbit_parameter_writer.cpp  brainbit_resistance_buffer.cpp
core/device/callibri/: callibri_angle_buffer.cpp  callibri_buffer_collection.cpp  callibri_command_handler.cpp  callibri_common_parameters.cpp  callibri_impl.cpp  callibri_mems_buffer.cpp  callibri_mems_handler.cpp  callibri_orientation_buffer.cpp  callibri_parameter_reader.cpp  callibri_parameter_writer.cpp  callibri_respiration_buffer.cpp  callibri_respiration_handler.cpp  callibri_signal_buffer.cpp  callibri_signal_handler.cpp  colibri_device.cpp
core/device_scanner/: device_scanner.cpp  enumeration_list.cpp
core/device_scanner/cpp/: scanner_factory.cpp
core/device_scanner/mm/: scanner_factory.mm
core/include/: algorithm.h  common_types.h  device_scanner.h  event_listener.h  event_notifier.h  event_observer.h  logger.h  loop.h  platform_traits.h  saturation_cast.h  scanner_factory.h  string_utils.h  task_queue.h
core/include/ble/: advertisement_data.h  ble_device.h  ble_device_info.h  ble_device_wrapper.h  ble_scanner.h  platform_traits.h  platform_traits_impl.h
core/include/ble/android/: ble_device_jni.h  bluetooth_scanner.h
core/include/ble/emulator/: emulated_device.h  emulator_client.h
core/include/ble/ios/: ble_delegate.h  ble_device_objc.h  ble_scanner_objc.h
core/include/ble/linux/: ble_device_z.h  device_scanner_z.h
core/include/ble/mac/: bluetooth_le_device_mac.h  gatt_characteristic_mac.h  gatt_service_mac.h  macos_ble_enumerator.h
core/include/ble/win/: ble_device_address.h  ble_device_win.h  ble_device_wrapper.h  ble_scanner_win.h  bluetooth_le_device_win.h  gatt_characteristic_win.h  gatt_service_win.h  gatt_wrapper.h  windows_ble_enumerator.h
core/include/c-wrap/: cbipolar-channel.h  cchannels.h  cdevice.h  cparams.h  cscanner.h  cspectrum-channel.h
core/include/channels/: angle_channel.h  base_channel.h  battery_channel.h  bipolar_channel.h  channel_info.h  connection_stats_channel.h  data_channel.h  data_channels.h  device_channel.h  electrode_state_channel.h  emulation_channel.h  filtered_channel.h  filtered_signal_channel_impl.h  mems_channel.h  mems_data.h  orientation_channel.h  quaternion.h  raw_signal_channel_impl.h  resistance_channel.h  respiration_channel.h  signal_channel.h  signal_channel_impl.h  spectrum_channel.h  spectrum_power_channel.h
core/include/channels/info/: channel_info.h  channel_notification.h  electrode_state.h
core/include/device/: brainbit.h  callibri.h  command_data.h  device.h  device_factory.h  device_impl.h  device_info.h  device_parameters.h  device_type.h  handler.h  handler_chain.h  ma_device_params.h  mems_device_params.h  packet.h  packet_handler.h  packet_sequence.h  param_values.h  parameter_reader.h  parameter_writer.h  request_handler.h  request_scheduler.h  signal_device_params.h
core/include/device/brainbit/: brainbit_command.h  brainbit_device.h  brainbit_impl.h  brainbit_parameter_reader.h  brainbit_parameter_writer.h  brainbit_protocol.h  (+1 more)
core/include/device_scanner/: ble_device_enumerator.h  device_enumerator.h  device_scanner.h  enumeration_list.h  scanner_factory.h
core/include/filter/: band_pass_filter.h  band_stop_filter.h  cascade_filter.h  digital_filter.h  direction_strategy.h  filter_algorithm.h  high_pass_filter.h  iir_filter.h  low_pass_filter.h  make_array.h
core/include/signal/: base_buffer.h  circular_buffer.h  safe_buffer.h  signal_reader.h  unbounded_buffer.h
core/signal/: brainbit_reader.cpp  channel.cpp  signal_reader.cpp  simple_reader.cpp
core/subsystem/: brainbit_signal_subsystem.cpp  colibri_signal_subsystem.cpp  colibri_stimulation_subsystem.cpp  signal_subsystem.cpp
wrappers/cross-platform/c/: CMakeLists.txt  cbattery-channel.cpp  cbipolar-channel.cpp  cbridge-channels.cpp  cchannel-helper.cpp  cchannels.cpp  cdevice.cpp  clistener.cpp  cparams.cpp  cresistance-channel.cpp  cscanner.cpp  csignal-channel.cpp  cspectrum-channel.cpp  device.cpp  sdk_error.cpp
(+410 files in other folders)
